--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Услуги мужа на час в Витебске, Гомеле, Могилёве. Мы предоставляем качественные услуги по ремонту и обслуживанию дома и офиса. Выполняем работы любой сложности. Гарантия на наши работы от 14 календарных дней. Используем только качественные материалы. Бесплатная консультация." />
 
   <link rel="android-chrome-192x192" sizes="192x192" href="/public/favicon/android-chrome-192x192.png">
   <link rel="android-chrome-512x512" sizes="512x512" href="/public/favicon/android-chrome-512x512.png">
@@ -15,7 +16,7 @@
   <link rel="shortcut icon" href="/favicon/apple-touch-icon.png">
 
   <meta name="theme-color" content="#000000" />
-  <title>Услуги сантехника</title>
+  <title>Муж на час | Домашний мастер</title>
 </head>
 
 <body>
@@ -24,3 +25,4 @@
 </body>
 
 </html>
+я
