--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Услуги мужа на час в Витебске, Гомеле, Могилёве. Мы предоставляем качественные услуги по ремонту и обслуживанию дома и офиса. Выполняем работы любой сложности. Гарантия на наши работы от 14 календарных дней. Используем только качественные материалы. Бесплатная консультация." />
 
-  <link rel="android-chrome-192x192" sizes="192x192" href="/public/favicon/android-chrome-192x192.png">
+  <!-- <link rel="android-chrome-192x192" sizes="192x192" href="/public/favicon/android-chrome-192x192.png">
   <link rel="android-chrome-512x512" sizes="512x512" href="/public/favicon/android-chrome-512x512.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/public/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/public/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/public/favicon/favicon-16x16.png">
-  <link rel="manifest" href="/public/favicon/site.webmanifest">
+  <link rel="manifest" href="/public/favicon/site.webmanifest"> -->
 
-  <link rel="shortcut icon" href="/favicon/apple-touch-icon.png">
+  <link rel="shortcut icon" href="/favicon/favicon.ico">
 
   <meta name="theme-color" content="#000000" />
-  <title>Муж на час | Домашний мастер</title>
+  <title>Муж на час | Домашний мастер с выездом к клиенту</title>
 </head>
 
 <body>
@@ -25,4 +25,3 @@
 </body>
 
 </html>
-я
